src/test/ui/issues/issue-82869.stderr
error: invalid register class `vreg`: unknown register class
  --> $DIR/issue-82869.rs:9:32
   |
LL |     asm!("add {:d}, {:d}, d0", out(vreg) c, in(vreg) a, in("d0") {
   |                                ^^^^^^^^^^^

error: invalid register class `vreg`: unknown register class
  --> $DIR/issue-82869.rs:9:45
   |
LL |     asm!("add {:d}, {:d}, d0", out(vreg) c, in(vreg) a, in("d0") {
   |                                             ^^^^^^^^^^

error: invalid register `d0`: unknown register
  --> $DIR/issue-82869.rs:9:57
   |
LL |       asm!("add {:d}, {:d}, d0", out(vreg) c, in(vreg) a, in("d0") {
   |  _________________________________________________________^
LL | |         || {};
LL | |         b
LL | |     });
   | |_____^

error: aborting due to 3 previous errors

